--- a/styles/nav.css
+++ b/styles/nav.css
@@ -47,19 +47,54 @@ nav {
   display: none;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 305px) {
+  nav{
+    margin-top: -45px;
+  }
+
+  .nav-icons {
+    gap: 10px;
+  }
+
+  .nav-dark {
+    margin-top: -45px;
+  }
+  .brand {
+    width: 50px;
+    margin-top: -5px;
+  }
   .nav-items {
     display: none !important;
   }
-
   .small {
     display: block;
     font-size: 2vw;
-  }
 
-  .hide {
-    display: none;
   }
+  
+}
+
+
+@media (min-width: 306px) and (max-width: 800px) {
+  nav{
+    margin-top: -45px;
+  }
+  .nav-dark {
+    margin-top: -45px;
+  }
+  .brand {
+    width: 90px;
+    margin-top: -5px;
+  }
+  .nav-items {
+    display: none !important;
+  }
+  .small {
+    display: block;
+    font-size: 2vw;
+
+  }
+  
 }
 
 
