--- a/styles/top.css
+++ b/styles/top.css
@@ -58,7 +58,7 @@
 .buttons {
   display: flex;
   gap: 10px;
-  margin-top: 1vw;
+  margin-top: 2vw;
 }
 
 .info-btn {
@@ -84,12 +84,15 @@
     height: 80vw;
   }
 
+  .buttons {
+    margin-top: 3vw;
+  }
   .billboard {
     bottom: 45%;
   }
 
   .top .content-row {
-    margin-top: 0;
+    margin-top: 40px;
     padding-top: 50%;
   }
 
