--- a/styles/nav.css
+++ b/styles/nav.css
@@ -5,6 +5,7 @@ nav {
   position: fixed;
   width: 100%;
   display: flex;
+  cursor: pointer;
   align-items: center;
   justify-content: space-between;
   padding: 1.5vw 4vw;
