--- a/styles/content-row.css
+++ b/styles/content-row.css
@@ -1,6 +1,7 @@
 /*
  Created by: Christian Niro
  */
+
 .content-row {
   margin: 3vw 0;
   padding: 0 4%;
@@ -29,12 +30,14 @@
   position: relative;
 }
 
+
 .rank svg {
   position: absolute;
   top: 0;
   left: 0;
   right: auto;
   bottom: 0;
+  height: 85%;
   width: 50%;
 }
 
@@ -51,19 +54,370 @@
 }
 
 
- 
-@media (max-width: 800px) {
+@media (min-width: 227px) and (max-width: 275px) {
   .content-row {
     margin: 10vw 0;
   }
+
   .content {
     width: 50%;
+    margin-right: 10px;
+  }
+
+  .spaced-content {
+    margin-bottom: 60px;
+  }
+
+  .rank {
+    height: 90px;
+    position: relative;
+  }
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: -10px;
+    right: auto;
+    height: 70px;
+
+
+  }
+
+  .rank img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 40px;
+    width: 70%;
+    height: 90%;
+    background-size: cover;
+    object-fit: cover;
+  }
+
+}
+
+@media (min-width: 276px) and (max-width: 300px) {
+  .content-row {
+    margin: 6vw 0;
+  }
+
+  .content {
+    width: 70%;
+    margin-top: 20px;
     margin-right: 0;
   }
 
   .spaced-content {
-    margin-bottom: 50px; 
+    margin-top: 40px;
+    margin-bottom: 60px;
   }
-  
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: 7px;
+    right: auto;
+    bottom: 0;
+    height: 80%;
+    width: 50%;
+  }
+
+  .rank img {
+    
+    right: -10px;
+    height: 120px;
+  }
 }
-  
+
+
+
+
+@media (min-width: 301px) and (max-width: 350px) {
+  .content-row {
+    margin: 10vw 0;
+  }
+
+  .content {
+    width: 70%;
+    margin-top: 20px;
+    margin-right: 0;
+  }
+
+  .spaced-content {
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: 7px;
+    right: auto;
+    bottom: 0;
+    height: 80%;
+    width: 50%;
+  }
+
+  .rank img {
+    
+    right: -1px;
+    height: 120px;
+  }
+
+}
+
+
+
+@media (min-width: 351px) and (max-width: 400px) {
+  .content-row {
+    margin: 8vw 0;
+  }
+
+  .content {
+    width: 60%;
+    margin-top: 20px;
+    margin-right: 0;
+  }
+
+  .spaced-content {
+    margin-top: 10px;
+    margin-bottom: 50px;
+  }
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: 7px;
+    right: auto;
+    bottom: 0;
+    height: 80%;
+    width: 50%;
+  }
+
+  .rank img {
+    
+    right: -1px;
+    height: 120px;
+  }
+
+
+}
+
+@media (min-width: 401px) and (max-width: 500px) {
+  .content-row {
+    margin: 10vw 0;
+  }
+
+  .content {
+    width: 50%;
+    margin-top: 20px;
+    margin-right: 0;
+  }
+
+  .spaced-content {
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: 7px;
+    right: auto;
+    bottom: 0;
+    height: 80%;
+    width: 50%;
+  }
+
+  .rank img {
+    
+    right: -5x;
+    height: 120px;
+  }
+
+
+}
+
+
+@media (min-width: 501px) and (max-width: 600px) {
+  .content-row {
+    margin: 8vw 0;
+  }
+
+  .content {
+    width: 40%;
+    margin-top: 20px;
+    margin-right: 0;
+  }
+
+  .spaced-content {
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: 7px;
+    right: auto;
+    bottom: 0;
+    height: 80%;
+    width: 50%;
+  }
+
+  .rank img {
+    
+    right: -5x;
+    height: 120px;
+  }
+
+
+}
+
+@media (min-width: 601px) and (max-width: 700px) {
+  .content-row {
+    margin: 5vw 0;
+  }
+
+  .content {
+    width: 30%;
+    margin-top: 10px;
+    margin-right: 0;
+  }
+
+  .spaced-content {
+    margin-top: -40px;
+    margin-bottom: 50px;
+  }
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: 7px;
+    right: auto;
+    bottom: 0;
+    height: 80%;
+    width: 50%;
+  }
+
+  .rank img {
+    
+    right: -5x;
+    height: 120px;
+  }
+
+
+}
+
+@media (min-width: 701px) and (max-width: 800px) {
+  .content-row {
+    margin: 5vw 0;
+  }
+
+  .content {
+    width: 30%;
+    margin-top: 10px;
+    margin-right: 0;
+  }
+
+  .spaced-content {
+    margin-top: -40px;
+    margin-bottom: 50px;
+  }
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: 7px;
+    right: auto;
+    bottom: 0;
+    height: 80%;
+    width: 50%;
+  }
+
+  .rank img {
+    
+    right: -5x;
+    height: 120px;
+  }
+
+
+}
+
+
+
+
+@media (min-width: 801px) and (max-width: 900px) {
+  .content {
+    width: 30%;
+    
+  }
+
+  .content-row {
+    margin: 8vw 0;
+  }
+
+  .rank img {
+    left: 90px;
+  }
+
+}
+
+@media (min-width: 901px) and (max-width: 1100px) {
+
+  .content {
+    width: 25%;
+    margin-top: 10px;
+    margin-right: 0;
+  }
+
+  .spaced-content {
+    margin-top: 40px;
+    margin-bottom: 50px;
+  }
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: 7px;
+    right: auto;
+    bottom: 0;
+    height: 80%;
+    width: 50%;
+  }
+
+  .rank img {
+    
+    right: -40x;
+    height: 120px;
+  }
+ 
+
+}
+
+@media (min-width: 1101px) and (max-width: 1200px){
+
+  .content {
+    width: 20%;
+    margin-top: 10px;
+    margin-right: 0;
+  }
+
+  .spaced-content {
+    margin-top: 40px;
+    margin-bottom: 50px;
+  }
+
+  .rank svg {
+    position: relative;
+    top: -5px;
+    left: 7px;
+    right: auto;
+    bottom: 0;
+    height: 80%;
+    width: 50%;
+  }
+
+
+}
