--- a/styles/player.css
+++ b/styles/player.css
@@ -13,6 +13,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    cursor: pointer;
     padding: 1.5vw 4vw;
     font-size: 1.2vw;
     z-index: 1000;
